output_10.1.168/gauge_field.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/gauge_field.h-3e01ad.hip.

[HIPIFY] info: file './quda/include/gauge_field.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 13
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 240
  TOTAL bytes: 27988
  CHANGED lines of code: 14
  TOTAL lines of code: 755
  CODE CHANGED (in bytes) %: 1
  CODE CHANGED (in lines) %: 2
  TIME ELAPSED s: 0.56
[HIPIFY] info: CONVERTED refs by type:
  type: 13
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 13
[HIPIFY] info: CONVERTED refs by names:
  cudaStream_t: 1
  cudaTextureObject_t: 12
